<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:nestedScrollingEnabled="false">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:gravity="center"
    />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:id="@+id/playerLayout_1">
        <TextView
            android:id="@+id/player_1"
            android:text="@string/Player_1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textSize="25dip"
            android:textColor="@color/red"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/p1_g1"
                android:text="@string/Gain_1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/p1_g5"
                android:text="@string/Gain_5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/p1_life"
                android:text="@string/Starting_Life"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="30dip"
                android:textColor="@color/red"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/p1_l5"
                android:text="@string/Lose_5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/p1_l1"
                android:text="@string/Lose_1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/player_2"
            android:text="@string/Player_2"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textSize="25dip"
            android:textColor="@color/blue"
            />
        <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/p2_g1"
            android:text="@string/Gain_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/p2_g5"
            android:text="@string/Gain_5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/p2_life"
            android:text="@string/Starting_Life"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_span="2"
            android:gravity="center"
            android:textSize="30dip"
            android:textColor="@color/blue"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/p2_l5"
            android:text="@string/Lose_5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/p2_l1"
            android:text="@string/Lose_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
        />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/player_3"
            android:text="@string/Player_3"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textSize="25dip"
            android:textColor="@color/black"
            />
        <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/p3_g1"
            android:text="@string/Gain_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/p3_g5"
            android:text="@string/Gain_5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
        />
        <TextView
            android:id="@+id/p3_life"
            android:text="@string/Starting_Life"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_span="2"
            android:gravity="center"
            android:textSize="30dip"
            android:textColor="@color/black"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/p3_l5"
            android:text="@string/Lose_5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/p3_l1"
            android:text="@string/Lose_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
        />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
    >
        <TextView
            android:id="@+id/player_4"
            android:text="@string/Player_4"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textSize="25dip"
            android:textColor="@color/green"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/p4_g1"
                android:text="@string/Gain_1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
            />
            <Button
                android:id="@+id/p4_g5"
                android:text="@string/Gain_5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
            />
            <TextView
                android:id="@+id/p4_life"
                android:text="@string/Starting_Life"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="30dip"
                android:textColor="@color/green"
            />
            <Button
                android:id="@+id/p4_l5"
                android:text="@string/Lose_5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
            />
            <Button
                android:id="@+id/p4_l1"
                android:text="@string/Lose_1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

